--- a/ENet.Managed/ENet.Managed.csproj
+++ b/ENet.Managed/ENet.Managed.csproj
@@ -1,98 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B1CAF2F-9649-46C2-9F97-C8E29C3ABB72}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ENet.Managed</RootNamespace>
-    <AssemblyName>ENet.Managed</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
+    <Authors>Moien007</Authors>
+    <Description>A managed wrapper for ENet UDP Networking library</Description>
+    <Version>2.0.0</Version>
+    <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ENetAllocator.cs" />
-    <Compile Include="ENetChecksum.cs" />
-    <Compile Include="ENetCompressor.cs" />
-    <Compile Include="ENetEvent.cs" />
-    <Compile Include="ENetEventType.cs" />
-    <Compile Include="ENetDeflateCompressor.cs" />
-    <Compile Include="ENetHost.cs" />
-    <Compile Include="ENetInterceptor.cs" />
-    <Compile Include="ENetManagedAllocator.cs" />
-    <Compile Include="ENetMulticastException.cs" />
-    <Compile Include="ENetPacket.cs" />
-    <Compile Include="ENetPacketFlags.cs" />
-    <Compile Include="ENetPeer.cs" />
-    <Compile Include="ENetPeerState.cs" />
-    <Compile Include="ENetUtils.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="LibENet.cs" />
-    <Compile Include="Linux.cs" />
-    <Compile Include="ManagedENet.cs" />
-    <Compile Include="Platform.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structures\Callbacks.cs" />
-    <Compile Include="Structures\ENetAddress.cs" />
-    <Compile Include="Structures\ENetBuffer.cs" />
-    <Compile Include="Structures\ENetCallbacks.cs" />
-    <Compile Include="Structures\ENetCompressor.cs" />
-    <Compile Include="Structures\ENetEvent.cs" />
-    <Compile Include="Structures\ENetHost.cs" />
-    <Compile Include="Structures\ENetList.cs" />
-    <Compile Include="Structures\ENetPacket.cs" />
-    <Compile Include="Structures\ENetPeer.cs" />
-    <Compile Include="ENetBinariesResource.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ENetBinariesResource.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Win32.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ENetBinariesResource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\libenet.dll" />
-    <None Include="Resources\libenet_X64.so.7.0.1" />
-    <None Include="Resources\libenet_X86.so.7.0.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\libenet64.dll" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  
 </Project>
