--- a/ENet.Managed/ENet.Managed.csproj
+++ b/ENet.Managed/ENet.Managed.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.0;net45</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
     <Authors>Moien007</Authors>
