--- a/ENet.Managed/ENet.Managed.csproj
+++ b/ENet.Managed/ENet.Managed.csproj
@@ -5,14 +5,18 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
     <Authors>Moien007</Authors>
-    <Description>A managed wrapper for ENet UDP Networking library</Description>
-    <Version>2.0.0</Version>
+    <Description>A managed wrapper for ENet UDP Networking library (Windows, Linux)</Description>
+    <Version>3.0.0</Version>
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageReleaseNotes>- Using ArrayPool for less allocation
+- Fixed ENetDeflateCompressor
+- Added ChecksumWithDeflate method to ENetHost</PackageReleaseNotes>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
+    <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
   
 </Project>
