--- a/ENet.Managed/ENet.Managed.csproj
+++ b/ENet.Managed/ENet.Managed.csproj
@@ -6,12 +6,10 @@
     <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
     <Authors>Moien007</Authors>
     <Description>A managed wrapper for ENet UDP Networking library (Windows, Linux)</Description>
-    <Version>3.0.1</Version>
+    <Version>3.0.2</Version>
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageReleaseNotes>- Using ArrayPool for less allocation
-- Fixed ENetDeflateCompressor
-- Added ChecksumWithDeflate method to ENetHost</PackageReleaseNotes>
+    <PackageReleaseNotes>- Linux ARM32 Support (thanks to github.com/Nenkai)</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
