Initial commit of rework branch

--- a/ENet.Managed/ENet.Managed.csproj
+++ b/ENet.Managed/ENet.Managed.csproj
@@ -1,20 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
+    <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    
+    <!--CS1591 warns us to comment every publicly accessible method\field\property, in future we may remove it-->
+    <!--CA2101 warns us to specifiy string encoding for every P\Invoke definition which I find it annoying-->
+    <!--CA1063 blindly warns us to implement IDisposable correctly-->
+    <NoWarn>CS1591,CA2101,CA1063</NoWarn>
+    
+    <!--Nuget package properties-->
     <Authors>Moien007</Authors>
-    <Description>A managed wrapper for ENet UDP Networking library (Windows, Linux)</Description>
-    <Version>3.0.2</Version>
+    <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
+    <Description>A managed wrapper for ENet UDP Networking library (Windows 32\64bit, Linux 32\64bit\ARM)</Description>
+    <Version>4.0.0</Version>
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageReleaseNotes>- Linux ARM32 Support (thanks to github.com/Nenkai)</PackageReleaseNotes>
+    <PackageReleaseNotes>Everything reworked thus breaking changes</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
-    <PackageReference Include="System.Buffers" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
   
 </Project>
