--- a/src/ENet.Managed/ENet.Managed.csproj
+++ b/src/ENet.Managed/ENet.Managed.csproj
@@ -15,11 +15,11 @@
     <!--Nuget package properties-->
     <Authors>Moien007</Authors>
     <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
-    <Description>A managed wrapper for ENet UDP Networking library (Windows 32\64bit, Linux 32\64bit\ARM)</Description>
-    <Version>4.0.0</Version>
+    <Description>A managed wrapper for ENet UDP Networking library (Windows 32\64bit, Linux 32\64bit\ARM32)</Description>
+    <Version>4.0.1</Version>
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageReleaseNotes>Everything reworked thus breaking changes</PackageReleaseNotes>
+    <PackageReleaseNotes>Checkout our discord server.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
