--- a/src/ENet.Managed/ENet.Managed.csproj
+++ b/src/ENet.Managed/ENet.Managed.csproj
@@ -15,11 +15,22 @@
     <!--Nuget package properties-->
     <Authors>Moien007</Authors>
     <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
-    <Description>A managed wrapper for ENet UDP Networking library (Windows 32\64bit, Linux 32\64bit\ARM32)</Description>
-    <Version>4.1.0</Version>
+    <Description>
+      A cross-platform managed wrapper for ENet UDP Networking library.
+      Platforms: Win32/64, ARM; Linux X86/64, ARM32/64.
+    </Description>
+    <Version>4.2.0-alpha</Version>
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageReleaseNotes>Checkout our discord server.</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      - Upgraded to ENet 1.3.15
+      - Added support for ARM32 on Win32
+      - Added support for ARM64 on Linux
+      - HOTFIX: Fixed Linux ENetHost offsets
+      - Added ENetHostPeerList class
+      - Added IENetEventListener interface
+      - Added ENetHost.DuplicatePeers property
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
