Moved unit-test project from tests\ to tests\UnitTest; added TestApp project.

--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ENet.Managed\ENet.Managed.csproj" />
+    <ProjectReference Include="..\..\src\ENet.Managed\ENet.Managed.csproj" />
   </ItemGroup>
 
 </Project>
