--- a/tests/TestApp/TestApp.csproj
+++ b/tests/TestApp/TestApp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ENet.Managed\ENet.Managed.csproj" />
+  </ItemGroup>
+
 </Project>
