Enabled appveyor csproj patching for versioning.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,13 @@
 version: 4.2.{build}-alpha
 image: Visual Studio 2019
+dotnet_csproj:
+  patch: true
+  file: 'src/ENet.Managed/ENet.Managed.csproj'
+  version: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 build_script:
 - cmd: >-
     dotnet restore
