--- a/src/ENet.Managed/ENet.Managed.csproj
+++ b/src/ENet.Managed/ENet.Managed.csproj
@@ -19,7 +19,7 @@
       A cross-platform managed wrapper for ENet UDP Networking library.
       Platforms: Win32/64, ARM; Linux X86/64, ARM32/64.
     </Description>
-    <Version>4.2.0-alpha</Version>
+    <!-- <Version>4.2.0-alpha</Version> Relies on appveyor csproj patching -->
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
     <PackageReleaseNotes>
