--- a/src/ENet.Managed/ENet.Managed.csproj
+++ b/src/ENet.Managed/ENet.Managed.csproj
@@ -19,7 +19,12 @@
       A cross-platform managed wrapper for ENet UDP Networking library.
       Platforms: Win32/64, ARM; Linux X86/64, ARM32/64.
     </Description>
-    <!-- <Version>4.2.0-alpha</Version> Relies on appveyor csproj patching -->
+
+    <!-- AppVeyor will take care of patching this versions -->
+    <Version>0.0.0</Version>
+    <AssemblyVersion>0.0.0</AssemblyVersion>
+    <PackageVersion>0.0.0</PackageVersion>
+
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
     <PackageReleaseNotes>
