Forgot PackageVersion property name.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ build_script:
 
     dotnet build ENet.Managed.sln -c Release -o build-output
 
-    dotnet pack src\ENet.Managed\ENet.Managed.csproj -c Release -o nuget-packs -p:%APPVEYOR_BUILD_VERSION%
+    dotnet pack src\ENet.Managed\ENet.Managed.csproj -c Release -o nuget-packs -p:PackageVersion=%APPVEYOR_BUILD_VERSION%
 test_script:
 - cmd: dotnet test ENet.Managed.sln -c Debug
 artifacts:
