--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 4.2.{build}-alpha
+version: 4.2.{build}
 image: Visual Studio 2019
 build_script:
 - cmd: >-
@@ -6,7 +6,7 @@ build_script:
 
     dotnet build ENet.Managed.sln -c Release -o build-output
 
-    dotnet pack src\ENet.Managed\ENet.Managed.csproj -c Release -o nuget-packs -p:PackageVersion=%APPVEYOR_BUILD_VERSION%
+    dotnet pack src\ENet.Managed\ENet.Managed.csproj -c Release -o nuget-packs -p:PackageVersion=%APPVEYOR_BUILD_VERSION% -p:AssemblyVersion=%APPVEYOR_BUILD_VERSION%
 test_script:
 - cmd: dotnet test ENet.Managed.sln -c Debug
 artifacts:
