--- a/src/ENet.Managed/ENet.Managed.csproj
+++ b/src/ENet.Managed/ENet.Managed.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net45;net50</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;net46;net50</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
@@ -26,23 +26,22 @@
     <PackageReleaseNotes>
       - Introduced ENetStartupOptions
       - Allowing custom ENet versions.
+      - Added Async TPL interface.
+      - Added IPv6 support.
     </PackageReleaseNotes>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="[4.0,5.0)" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Memory" Version="[4.5,5.0)" />
+    <PackageReference Include="System.Buffers" Version="[4.5,5.0)" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net50'">
+    <PackageReference Include="System.Threading.Channels" Version="[5.0,6.0)" />
+  </ItemGroup>
+  
   <ItemGroup>
     <EmbeddedResource Include="ENetBinariesResource.resx" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Async\" />
   </ItemGroup>
   
 </Project>
