--- a/src/ENet.Managed/ENet.Managed.csproj
+++ b/src/ENet.Managed/ENet.Managed.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net46;net50</TargetFrameworks>
+    <TargetFrameworks>net50;netcoreapp3.1</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
@@ -19,29 +19,17 @@
     <RepositoryUrl>https://github.com/moien007/ENet.Managed</RepositoryUrl>
     <Description>
       A cross-platform managed wrapper for ENet UDP Networking library.
-      Platforms: Win32/64|ARM64 - Linux X86/64|ARM32/64.
+      Platforms: Win32|x86_64|ARM64 - Linux x86_64|ARM32|ARM64.
     </Description>
     <PackageProjectUrl>https://github.com/moien007/ENet.Managed</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/moien007/ENet.Managed/blob/master/LICENSE</PackageLicenseUrl>
     <PackageReleaseNotes>
-      - Introduced ENetStartupOptions
-      - Allowing custom ENet versions.
-      - Added Async TPL interface.
-      - Added IPv6 support.
+      - 
     </PackageReleaseNotes>
   </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Memory" Version="[4.5,5.0)" />
-    <PackageReference Include="System.Buffers" Version="[4.5,5.0)" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net50'">
-    <PackageReference Include="System.Threading.Channels" Version="[5.0,6.0)" />
-  </ItemGroup>
   
   <ItemGroup>
-    <EmbeddedResource Include="ENetBinariesResource.resx" />
+    <PackageReference Include="ENet.Managed.Runtime" Version="[1.3.17,1.4.0)" />
   </ItemGroup>
   
 </Project>
