--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,25 +1,38 @@
-name: .NET
+name: Build, Test, and Pack
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        build_config: ['Release', 'Debug']
+
     steps:
     - uses: actions/checkout@v2
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --configuration ${{ matrix.build_config }}
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+    - name: Pack the nuget packages
+      run: dotnet pack --no-restore --configuration ${{matrix.build_config}} -p:PackageVersion=${{ github.run_number }} --output ${{ github.workspace }}/pack
+
+    - name: Upload the nuget packages
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: ENet.Managed-${{ github.sha }}
+        path: ${{ github.workspace }}/pack
