--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,10 +29,12 @@ jobs:
       run: dotnet test --no-build --verbosity normal --configuration ${{ matrix.build_config }}
 
     - name: Pack the nuget packages
-      run: dotnet pack --no-restore --configuration ${{matrix.build_config}} -p:PackageVersion=5.0.3.${{ github.run_number }}-alpha --output ${{ github.workspace }}/pack
+      run: dotnet pack --no-restore --configuration ${{matrix.build_config}} -p:PackageVersion=5.0.4.${{ github.run_number }}-alpha --output ${{ github.workspace }}/pack
 
     - name: Upload the nuget packages
       uses: actions/upload-artifact@v2.2.2
       with:
-        name: ENet.Managed-${{ github.sha }}
+        name: ENet.Managed-${{ matrix.build_config }}-${{ github.sha }}
         path: ${{ github.workspace }}/pack
+        
+        
